<resources>
    <string name="app_name">Covid\nVremenar</string>
    <string name="pozdravljeni_v_aplikaciji_covid_vremenar">Pozdravljeni v aplikaciji COVID Vremenar!</string>
    <string name="podpis">Aplikacija nudi lokalno in celotno sliko o epidemiji COVID-19 v Sloveniji.</string>
    <string name="gumb_pozdravni">ZAČNIMO</string>
    <string name="ime_občine">Ime občine</string>
    <string name="prebivalci">Prebivalcev:</string>
    <string name="aktivni_primeri">Aktivni primeri:</string>
    <string name="tedenski_prirast">Število aktivnih primerov:</string>
    <integer name="stevilo_prebivalcev">0</integer>
    <string name="st_potrjenih_primerov"> </string>
    <string name="procent_tedenskega_prirasta">…</string>
    <string name="besedilo_prosnja_lokacije1">Za učinkovitejšo uporabo aplikacije je potreben dostop do lokacije.</string>
    <string name="prosnja_za_lokacijo_vprasanje">Ali dovoljuješ aplikaciji dostop do lokacije?</string>
    <string name="prosnja_za_lokacijo_pojasnilo">Aplikacija bo dostopala do lokacije samo enkrat, za avtomatsko zaznavo domače občine.</string>
    <string name="novi_primeri">Novi primeri:</string>
    <string name="st_novih_primerov"> </string>
    <string name="znak_pika">.</string>

    <string name="cepljenje_datumpodatkov">Najnovejši podatki za dan:  </string>
    <string name="cepljenje_danesprvi">Cepljenih s prvim odmerkom v dnevu: </string>
    <string name="cepljenje_dodanesprvi">Vseh cepljenih s prvim odmerkom: </string>
    <string name="cepljenje_danesdrugi">Cepljenih z drugim odmerkom v dnevu: </string>
    <string name="cepljenje_dodanesdrugi">Vseh cepljenih z drugim odmerkom:</string>

</resources>