<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MojaObcinaActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Moja občina:"
        android:textSize="15sp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:textColor="@color/black"
        />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_navigation"
        app:itemBackground="@color/modra"
        android:background="@color/modra"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"
        app:menu="@menu/menu_navigation"
        android:layout_alignParentBottom="true"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ime_občine"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="25dp"
        android:layout_centerHorizontal="true"
        android:paddingTop="90dp"/>

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="191dp"
        android:layout_height="353dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prebivalci"
        android:layout_centerVertical="true"
        android:paddingTop="160dp"
        android:paddingLeft="60dp"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:textSize="15dp"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aktivni_primeri"
        android:layout_centerVertical="true"
        android:paddingTop="270dp"
        android:paddingLeft="60dp"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:textSize="15dp"/>


    <TextView
        android:id="@+id/textViewNoviPrimeri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/novi_primeri"
        android:layout_centerVertical="true"
        android:paddingTop="370dp"
        android:paddingLeft="60dp"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:textSize="15dp"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tedenski_prirast"
        android:layout_centerVertical="true"
        android:paddingTop="470dp"
        android:paddingLeft="60dp"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:textSize="15dp"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingLeft="210dp"
        android:layout_centerVertical="true"
        android:paddingTop="160dp"
        android:text="@integer/stevilo_prebivalcev"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingLeft="210dp"
        android:layout_centerVertical="true"
        android:paddingTop="260dp"
        android:text="@string/st_potrjenih_primerov"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewSteviloNovih"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingLeft="210dp"
        android:layout_centerVertical="true"
        android:paddingTop="360dp"
        android:text="@string/st_novih_primerov"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingLeft="210dp"
        android:layout_centerVertical="true"
        android:paddingTop="460dp"
        android:text="@string/procent_tedenskega_prirasta"
        android:textSize="15dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewObvestiloODatumu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="145dp"
        android:layout_marginLeft="50dp"
        android:textSize="14dp"
        android:text=" " />

</RelativeLayout>