<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#87CEEB"
    xmlns:android="http://schemas.android.com/apk/res/android">

<TextView
    android:id="@+id/inv"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:text="@string/pozdravljeni_v_aplikaciji_covid_vremenar"
    android:gravity="center"
    android:textColor="@color/white"
    android:textStyle="bold"
    android:textSize="23sp" />

<TextView
    android:id="@+id/promo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/inv"
    android:gravity="center"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:layout_marginTop="60dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:textColor="@color/black"
    android:text="@string/podpis" />

    <Button
        android:id="@+id/buttonZacnimo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/gumb_pozdravni"
        android:paddingRight="40dp"
        android:paddingLeft="40dp"
        android:layout_below="@+id/promo"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="99dp"
        android:layout_height="187dp"
        android:layout_marginLeft="-321dp"
        android:layout_toRightOf="@+id/promo"
        android:src="@mipmap/soncek" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="96dp"
        android:layout_height="107dp"
        android:layout_marginLeft="20dp"
        android:src="@mipmap/oblacek" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="125dp"
        android:layout_height="136dp"
        android:layout_marginLeft="-149dp"
        android:layout_toRightOf="@+id/promo"
        android:src="@mipmap/oblacek" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="90dp"
        android:layout_height="47dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:src="@mipmap/oblacek" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="30dp"
        android:layout_height="77dp"
        android:layout_marginLeft="-59dp"
        android:layout_marginTop="100dp"
        android:layout_toRightOf="@+id/promo"
        android:src="@mipmap/virusek" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="43dp"
        android:layout_height="79dp"
        android:layout_marginLeft="-70dp"
        android:layout_marginTop="200dp"
        android:layout_toRightOf="@+id/promo"
        android:src="@mipmap/virusek" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="39dp"
        android:layout_height="64dp"
        android:layout_marginLeft="-189dp"
        android:layout_marginTop="140dp"
        android:layout_toRightOf="@+id/promo"
        android:src="@mipmap/virusek" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="36dp"
        android:layout_height="59dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="170dp"
        android:layout_marginRight="-60dp"
        android:layout_toLeftOf="@+id/promo"
        android:src="@mipmap/virusek" />

</RelativeLayout>